# finman

./: .gitignore  Cargo.toml  Justfile  README.md  hello.py  pyproject.toml  retriever.py
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  transaction.rs
